--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.idea/Kerberos.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/*
